--- a/style/scss/partials/_footer.scss
+++ b/style/scss/partials/_footer.scss
@@ -17,9 +17,11 @@ footer {
         }
     }
 
+    
 
     p {
         margin: 0px !important;
+        color: hsl(211, 10%, 61%) !important;
     }
 
     .footer-redes {
