--- a/templates/ayuda.html
+++ b/templates/ayuda.html
@@ -54,7 +54,8 @@
                             <a class="nav-link activo" href="../templates/ayuda.html">Ayuda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i class="bi bi-person-circle"></i></a>
+                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i
+                                    class="bi bi-person-circle"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -70,7 +71,7 @@
             <h1>Centro de ayuda</h1>
         </div>
         <div class="wow animate__animated animate__fadeIn">
-            <div class="mb-3">
+            <div class="mb-3 titulo_preguntas">
                 <h3>Preguntas frecuentes</h3>
             </div>
             <div class="accordion " id="accordionExample">
@@ -85,7 +86,8 @@
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             En <strong>Connect</strong>, ofrecemos una amplia gama de servicios de telecomunicación y
-                            soluciones informáticas. Algunos de nuestros servicios incluyen cloud computing, servidores a
+                            soluciones informáticas. Algunos de nuestros servicios incluyen cloud computing, servidores
+                            a
                             medida, conectividad de alta velocidad, soluciones de respaldo y recuperación de datos,
                             seguridad cibernética avanzada y soporte técnico especializado. Nuestra oferta está diseñada
                             para satisfacer las necesidades de empresas de todos los tamaños y sectores, brindando
@@ -103,9 +105,11 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            En <strong>Connect</strong>, aceptamos varios métodos de pago para facilitar la contratación de nuestros
+                            En <strong>Connect</strong>, aceptamos varios métodos de pago para facilitar la contratación
+                            de nuestros
                             servicios. Los métodos de pago aceptados incluyen tarjetas de crédito (Visa, Mastercard,
-                            American Express), transferencias bancarias y pagos electrónicos a través de plataformas de pago
+                            American Express), transferencias bancarias y pagos electrónicos a través de plataformas de
+                            pago
                             seguras. Trabajamos continuamente para brindarte opciones de pago flexibles y seguras que se
                             adapten a tus necesidades.
                         </div>
@@ -121,9 +125,12 @@
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            Sí, en <strong>Connect</strong> te ofrecemos la posibilidad de cambiar o actualizar tus servicios una vez que los
-                            hayas contratado. Entendemos que las necesidades de tu negocio pueden cambiar con el tiempo, por
-                            lo que te brindamos la flexibilidad de ajustar tus servicios para adaptarse a nuevas demandas o
+                            Sí, en <strong>Connect</strong> te ofrecemos la posibilidad de cambiar o actualizar tus
+                            servicios una vez que los
+                            hayas contratado. Entendemos que las necesidades de tu negocio pueden cambiar con el tiempo,
+                            por
+                            lo que te brindamos la flexibilidad de ajustar tus servicios para adaptarse a nuevas
+                            demandas o
                             crecimiento. Nuestro equipo de atención al cliente estará encantado de guiarte a través del
                             proceso de actualización y asegurarse de que recibas la solución más adecuada para tus
                             necesidades actuales.
@@ -140,10 +147,13 @@
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            En <strong>Connect</strong>, nos enorgullecemos de proporcionar un equipo de soporte técnico altamente capacitado
-                            y comprometido con la satisfacción de nuestros clientes. Nuestro tiempo de respuesta promedio es
+                            En <strong>Connect</strong>, nos enorgullecemos de proporcionar un equipo de soporte técnico
+                            altamente capacitado
+                            y comprometido con la satisfacción de nuestros clientes. Nuestro tiempo de respuesta
+                            promedio es
                             de 15 minutos para consultas y solicitudes técnicas. Nos esforzamos por resolver cualquier
-                            problema de manera rápida y eficiente, asegurándonos de que tus sistemas estén en funcionamiento
+                            problema de manera rápida y eficiente, asegurándonos de que tus sistemas estén en
+                            funcionamiento
                             óptimo en todo momento.
                         </div>
                     </div>
@@ -158,9 +168,12 @@
                     <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            Para acceder a tu cuenta y realizar cambios en tus servicios contratados en Connect, simplemente
-                            inicia sesión en nuestra plataforma en línea. Una vez dentro, encontrarás un panel de control
-                            intuitivo desde donde podrás gestionar tus servicios, ver facturas, realizar pagos y realizar
+                            Para acceder a tu cuenta y realizar cambios en tus servicios contratados en Connect,
+                            simplemente
+                            inicia sesión en nuestra plataforma en línea. Una vez dentro, encontrarás un panel de
+                            control
+                            intuitivo desde donde podrás gestionar tus servicios, ver facturas, realizar pagos y
+                            realizar
                             cualquier cambio que desees. Si necesitas ayuda o tienes alguna pregunta, nuestro equipo de
                             soporte estará disponible para asistirte en cada paso del proceso.
                         </div>
@@ -171,7 +184,7 @@
         <div class="text-center m-5 wow animate__animated animate__fadeIn">
             <h3>¿No encontraste lo que buscabas?</h3>
         </div>
-        <div class="container ayuda__contacto row justify-content-center">
+        <div class="ayuda__contacto row justify-content-center">
             <form class="contacto__formulario col-md-8 col-lg-5 col-xl-5">
                 <div class="mb-3">
                     <h4>Dejanos un mensaje. Responderemos lo antes posible</h4>
@@ -192,19 +205,20 @@
                     <button class="btn boton">Enviar</button>
                 </div>
             </form>
-            <div class="contacto__medios col-md-8 col-lg-6 col-xl-5">
-                <div class="atencion-cliente mb-4">
-                    <h3>Atención al cliente</h3>
-                    <p>Línea Buenos Aires: 11 1263-1456</p>
-                    <p>Línea resto del país: 0800-555-4466</p>
-                    <p>Email: atencion-cliente@connect.com</p>
-                </div>
-                <div class="servicio-tecnico">
-                    <h3>Servicio técnico</h3>
-                    <p>Línea Buenos Aires: 11 1223-9852</p>
-                    <p>Línea resto del país: 0800-555-8552</p>
-                    <p>Email: servicio-tecnico@connect.com</p>
-                </div>
+            <div class="col-md-8 col-lg-6 col-xl-5">
+                <div class="contacto__medios">
+                    <div class="atencion-cliente mb-4">
+                        <h3>Atención al cliente</h3>
+                        <p>Línea Buenos Aires: 11 1263-1456</p>
+                        <p>Línea resto del país: 0800-555-4466</p>
+                        <p>Email: atencion-cliente@connect.com</p>
+                    </div>
+                    <div class="servicio-tecnico">
+                        <h3>Servicio técnico</h3>
+                        <p>Línea Buenos Aires: 11 1223-9852</p>
+                        <p>Línea resto del país: 0800-555-8552</p>
+                        <p>Email: servicio-tecnico@connect.com</p>
+                    </div>
                 </div>
             </div>
         </div>
