--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -73,7 +73,7 @@
             <h2>Un equipo de profesionales para una empresa profesional</h2>
         </div>
         <div class="nosotros__info">
-            <div class="wow animate__animated animate__fadeIn">
+            <div class="wow animate__animated animate__fadeInDown">
                 <p>En Connect, somos una empresa líder en soluciones de telecomunicaciones y tecnología de la
                     información.Nuestra visión es ser el puente que conecta a las personas, empresas y comunidades con un
                     mundo digital en constante evolución. Desde nuestra fundación, hemos estado dedicados a proporcionar
@@ -100,7 +100,9 @@
             </div>
         </div>
         <div>
-            <h3 class="m-5 text-center">Nuestra Familia</h3>
+            <div class="wow animate__animated animate__fadeIn">
+                <h3 class="m-5 text-center">Nuestra Familia</h3>
+            </div>
             <div>
                 <div class="cards__nosotros">
                     <div class="card__nosotros">
